setting up water supplies by county

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -1127,8 +1127,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kludge- make the decision to assign water systems to the first county in their list so that I'm not multiple-counting staffing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1209,6 +1216,7 @@
        "      <th>Postal Code</th>\n",
        "      <th>FIPS</th>\n",
        "      <th>Number of Counties Served</th>\n",
+       "      <th>First County Served</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1229,6 +1237,7 @@
        "      <td>SD</td>\n",
        "      <td>46</td>\n",
        "      <td>10</td>\n",
+       "      <td>Brown</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1247,11 +1256,11 @@
        "        Number of Violations  Number of Site Visits State          Name  \\\n",
        "113166                     4                      8    SD  South Dakota   \n",
        "\n",
-       "       Postal Code  FIPS  Number of Counties Served  \n",
-       "113166          SD    46                         10  "
+       "       Postal Code  FIPS  Number of Counties Served First County Served  \n",
+       "113166          SD    46                         10               Brown  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,10 +1270,282 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\garfink2\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py:252: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  res_values = method(rvalues)\n"
+     ]
+    }
+   ],
    "source": [
-    "Kludge- make the decision to assign water systems to the first county in their list so that I'm not multiple-counting staffing"
+    "for stateFP in gdf_USCounties[\"STATEFP\"].unique():\n",
+    "    gdf_StateCounties = gdf_USCounties[gdf_USCounties[\"STATEFP\"]==stateFP]\n",
+    "    df_WaterSuppliesSubset = df_AllStateWaterSupplies[df_AllStateWaterSupplies[\"FIPS\"]==stateFP]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATEFP</th>\n",
+       "      <th>COUNTYFP</th>\n",
+       "      <th>COUNTYNS</th>\n",
+       "      <th>GEOID</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>NAMELSAD</th>\n",
+       "      <th>LSAD</th>\n",
+       "      <th>CLASSFP</th>\n",
+       "      <th>MTFCC</th>\n",
+       "      <th>CSAFP</th>\n",
+       "      <th>CBSAFP</th>\n",
+       "      <th>METDIVFP</th>\n",
+       "      <th>FUNCSTAT</th>\n",
+       "      <th>ALAND</th>\n",
+       "      <th>AWATER</th>\n",
+       "      <th>INTPTLAT</th>\n",
+       "      <th>INTPTLON</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1341</th>\n",
+       "      <td>44</td>\n",
+       "      <td>009</td>\n",
+       "      <td>01219782</td>\n",
+       "      <td>44009</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Washington County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H4</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>148</td>\n",
+       "      <td>39300</td>\n",
+       "      <td>None</td>\n",
+       "      <td>N</td>\n",
+       "      <td>852825659</td>\n",
+       "      <td>604771644</td>\n",
+       "      <td>+41.4009815</td>\n",
+       "      <td>-071.6175979</td>\n",
+       "      <td>MULTIPOLYGON (((-71.67881 41.15891, -71.67626 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1638</th>\n",
+       "      <td>44</td>\n",
+       "      <td>007</td>\n",
+       "      <td>01219781</td>\n",
+       "      <td>44007</td>\n",
+       "      <td>Providence</td>\n",
+       "      <td>Providence County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H4</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>148</td>\n",
+       "      <td>39300</td>\n",
+       "      <td>None</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1060791694</td>\n",
+       "      <td>67639362</td>\n",
+       "      <td>+41.8697652</td>\n",
+       "      <td>-071.5786261</td>\n",
+       "      <td>POLYGON ((-71.79468 41.85441, -71.79491 41.858...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2917</th>\n",
+       "      <td>44</td>\n",
+       "      <td>001</td>\n",
+       "      <td>01219777</td>\n",
+       "      <td>44001</td>\n",
+       "      <td>Bristol</td>\n",
+       "      <td>Bristol County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H4</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>148</td>\n",
+       "      <td>39300</td>\n",
+       "      <td>None</td>\n",
+       "      <td>N</td>\n",
+       "      <td>62513687</td>\n",
+       "      <td>53346252</td>\n",
+       "      <td>+41.7068313</td>\n",
+       "      <td>-071.2866369</td>\n",
+       "      <td>POLYGON ((-71.32898 41.67994, -71.33097 41.686...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2919</th>\n",
+       "      <td>44</td>\n",
+       "      <td>005</td>\n",
+       "      <td>01219779</td>\n",
+       "      <td>44005</td>\n",
+       "      <td>Newport</td>\n",
+       "      <td>Newport County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H4</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>148</td>\n",
+       "      <td>39300</td>\n",
+       "      <td>None</td>\n",
+       "      <td>N</td>\n",
+       "      <td>265310311</td>\n",
+       "      <td>546985247</td>\n",
+       "      <td>+41.5025036</td>\n",
+       "      <td>-071.2836888</td>\n",
+       "      <td>POLYGON ((-71.42190 41.44900, -71.41727 41.455...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3211</th>\n",
+       "      <td>44</td>\n",
+       "      <td>003</td>\n",
+       "      <td>01219778</td>\n",
+       "      <td>44003</td>\n",
+       "      <td>Kent</td>\n",
+       "      <td>Kent County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H4</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>148</td>\n",
+       "      <td>39300</td>\n",
+       "      <td>None</td>\n",
+       "      <td>N</td>\n",
+       "      <td>436556188</td>\n",
+       "      <td>50710341</td>\n",
+       "      <td>+41.6773310</td>\n",
+       "      <td>-071.5787858</td>\n",
+       "      <td>POLYGON ((-71.48391 41.73160, -71.48362 41.731...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     STATEFP COUNTYFP  COUNTYNS  GEOID        NAME           NAMELSAD LSAD  \\\n",
+       "1341      44      009  01219782  44009  Washington  Washington County   06   \n",
+       "1638      44      007  01219781  44007  Providence  Providence County   06   \n",
+       "2917      44      001  01219777  44001     Bristol     Bristol County   06   \n",
+       "2919      44      005  01219779  44005     Newport     Newport County   06   \n",
+       "3211      44      003  01219778  44003        Kent        Kent County   06   \n",
+       "\n",
+       "     CLASSFP  MTFCC CSAFP CBSAFP METDIVFP FUNCSTAT       ALAND     AWATER  \\\n",
+       "1341      H4  G4020   148  39300     None        N   852825659  604771644   \n",
+       "1638      H4  G4020   148  39300     None        N  1060791694   67639362   \n",
+       "2917      H4  G4020   148  39300     None        N    62513687   53346252   \n",
+       "2919      H4  G4020   148  39300     None        N   265310311  546985247   \n",
+       "3211      H4  G4020   148  39300     None        N   436556188   50710341   \n",
+       "\n",
+       "         INTPTLAT      INTPTLON  \\\n",
+       "1341  +41.4009815  -071.6175979   \n",
+       "1638  +41.8697652  -071.5786261   \n",
+       "2917  +41.7068313  -071.2866369   \n",
+       "2919  +41.5025036  -071.2836888   \n",
+       "3211  +41.6773310  -071.5787858   \n",
+       "\n",
+       "                                               geometry  \n",
+       "1341  MULTIPOLYGON (((-71.67881 41.15891, -71.67626 ...  \n",
+       "1638  POLYGON ((-71.79468 41.85441, -71.79491 41.858...  \n",
+       "2917  POLYGON ((-71.32898 41.67994, -71.33097 41.686...  \n",
+       "2919  POLYGON ((-71.42190 41.44900, -71.41727 41.455...  \n",
+       "3211  POLYGON ((-71.48391 41.73160, -71.48362 41.731...  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_StateCounties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PWS ID</th>\n",
+       "      <th>PWS Name</th>\n",
+       "      <th>PWS Type</th>\n",
+       "      <th>Primary Source</th>\n",
+       "      <th>Counties Served</th>\n",
+       "      <th>Cities Served</th>\n",
+       "      <th>PopulationServed Count</th>\n",
+       "      <th>Number of Facilities</th>\n",
+       "      <th>Number of Violations</th>\n",
+       "      <th>Number of Site Visits</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>Number of Counties Served</th>\n",
+       "      <th>First County Served</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [PWS ID, PWS Name, PWS Type, Primary Source, Counties Served, Cities Served, PopulationServed Count, Number of Facilities, Number of Violations, Number of Site Visits, State, Name, Postal Code, FIPS, Number of Counties Served, First County Served]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_WaterSuppliesSubset"
    ]
   },
   {
@@ -1272,7 +1553,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i,row in df_AllStateWaterSupplies.iterrows():\n",
+    "    county = row[\"First County Served\"]\n",
+    "    state = row[\"FIPS\"]\n",
+    "    gdf_USCounties_Subset = gdf_USCounties[gdf_USCounties[\"STATEFP\"]==state]"
+   ]
   }
  ],
  "metadata": {
