set up county fips column

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -1608,13 +1608,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_AllStateWaterSupplies[\"County FIPS\"] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for stateFP in gdf_USCounties[\"STATEFP\"].unique():\n",
     "    gdf_StateCounties = gdf_USCounties[gdf_USCounties[\"STATEFP\"]==stateFP]\n",
-    "    df_WaterSuppliesSubset = df_AllStateWaterSupplies[df_AllStateWaterSupplies[\"FIPS\"]==int(stateFP)]"
+    "    df_WaterSuppliesSubset = df_AllStateWaterSupplies[df_AllStateWaterSupplies[\"FIPS\"]==int(stateFP)]\n",
+    "    for i,row in df_WaterSuppliesSubset.iterrows():\n",
+    "        county = row[\"First County Served\"]\n",
+    "        countyRow = gdf_StateCounties[gdf_StateCounties[\"NAME\"] == county]"
    ]
   },
   {
