trying to set county fips

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,7 +1626,9 @@
     "    df_WaterSuppliesSubset = df_AllStateWaterSupplies[df_AllStateWaterSupplies[\"FIPS\"]==int(stateFP)]\n",
     "    for i,row in df_WaterSuppliesSubset.iterrows():\n",
     "        county = row[\"First County Served\"]\n",
-    "        countyRow = gdf_StateCounties[gdf_StateCounties[\"NAME\"] == county]"
+    "        countyRow = gdf_StateCounties[gdf_StateCounties[\"NAME\"] == county]\n",
+    "        countyFIPS = countyRow[\"GEOID\"]\n",
+    "        df_AllStateWaterSupplies.at[i,'County FIPS'] = countyFIPS"
    ]
   },
   {
