setting up fuzzy wuzzy

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,8 @@
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os"
+    "import os\n",
+    "from fuzzywuzzy import fuzz, process"
    ]
   },
   {
@@ -2805,6 +2806,37 @@
    ],
    "source": [
     "gdf_StateCounties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Going to need to implement closest match with fuzzy wuzzy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Aleutians West', 90, 2391),\n",
+       " ('Aleutians East', 86, 2063),\n",
+       " ('Yakutat', 51, 2564),\n",
+       " ('Fairbanks North Star', 48, 1433),\n",
+       " ('Southeast Fairbanks', 47, 1280)]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process.extract(\"Aleutians West Census Area\",gdf_StateCounties.NAME,limit=5)"
    ]
   },
   {
