trying to query by closest match

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -1609,25 +1609,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_AllStateWaterSupplies[\"County FIPS\"] = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_AllStateWaterSupplies[\"County FIPS\"] = None\n",
     "for stateFP in gdf_USCounties[\"STATEFP\"].unique():\n",
     "    gdf_StateCounties = gdf_USCounties[gdf_USCounties[\"STATEFP\"]==stateFP]\n",
     "    df_WaterSuppliesSubset = df_AllStateWaterSupplies[df_AllStateWaterSupplies[\"FIPS\"]==int(stateFP)]\n",
     "    for i,row in df_WaterSuppliesSubset.iterrows():\n",
     "        county = row[\"First County Served\"]\n",
-    "        countyRow = gdf_StateCounties[gdf_StateCounties[\"NAME\"] == county]\n",
+    "        # find the best match of county name\n",
+    "        bestMatch = process.extract(county,gdf_StateCounties.NAME,limit=5)[0][0]\n",
+    "        countyRow = gdf_StateCounties[gdf_StateCounties[\"NAME\"] == bestMatch].iloc[0]\n",
     "        countyFIPS = countyRow[\"GEOID\"]\n",
     "        df_AllStateWaterSupplies.at[i,'County FIPS'] = countyFIPS"
    ]
@@ -2006,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2015,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2799,7 +2793,7 @@
        "3197  MULTIPOLYGON (((-133.69670 57.79272, -133.6967...  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2817,26 +2811,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = process.extract(\"Aleutians West Census Area\",gdf_StateCounties.NAME,limit=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Aleutians West', 90, 2391),\n",
-       " ('Aleutians East', 86, 2063),\n",
-       " ('Yakutat', 51, 2564),\n",
-       " ('Fairbanks North Star', 48, 1433),\n",
-       " ('Southeast Fairbanks', 47, 1280)]"
+       "'Aleutians West'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "process.extract(\"Aleutians West Census Area\",gdf_StateCounties.NAME,limit=5)"
+    "a[0][0]"
    ]
   },
   {
