counting number of water supplies per county

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2164,205 +2164,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numberWaterSuppliesInCounty = df_AllStateWaterSupplies.groupby(\"County FIPS\").count()[\"PWS ID\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PopulationServed Count</th>\n",
-       "      <th>Number of Facilities</th>\n",
-       "      <th>Number of Violations</th>\n",
-       "      <th>Number of Site Visits</th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>Number of Counties Served</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>County FIPS</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>01001</th>\n",
-       "      <td>62988</td>\n",
-       "      <td>160</td>\n",
-       "      <td>132</td>\n",
-       "      <td>295</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>01003</th>\n",
-       "      <td>186590</td>\n",
-       "      <td>329</td>\n",
-       "      <td>802</td>\n",
-       "      <td>1137</td>\n",
-       "      <td>25</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>01005</th>\n",
-       "      <td>37356</td>\n",
-       "      <td>142</td>\n",
-       "      <td>145</td>\n",
-       "      <td>458</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>01007</th>\n",
-       "      <td>23541</td>\n",
-       "      <td>84</td>\n",
-       "      <td>30</td>\n",
-       "      <td>194</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>01009</th>\n",
-       "      <td>67126</td>\n",
-       "      <td>151</td>\n",
-       "      <td>234</td>\n",
-       "      <td>573</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56037</th>\n",
-       "      <td>54215</td>\n",
-       "      <td>320</td>\n",
-       "      <td>766</td>\n",
-       "      <td>357</td>\n",
-       "      <td>2576</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56039</th>\n",
-       "      <td>55217</td>\n",
-       "      <td>882</td>\n",
-       "      <td>2589</td>\n",
-       "      <td>708</td>\n",
-       "      <td>6384</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56041</th>\n",
-       "      <td>19895</td>\n",
-       "      <td>102</td>\n",
-       "      <td>210</td>\n",
-       "      <td>124</td>\n",
-       "      <td>672</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56043</th>\n",
-       "      <td>7283</td>\n",
-       "      <td>92</td>\n",
-       "      <td>130</td>\n",
-       "      <td>51</td>\n",
-       "      <td>504</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56045</th>\n",
-       "      <td>6580</td>\n",
-       "      <td>89</td>\n",
-       "      <td>1037</td>\n",
-       "      <td>85</td>\n",
-       "      <td>728</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3087 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             PopulationServed Count  Number of Facilities  \\\n",
-       "County FIPS                                                 \n",
-       "01001                         62988                   160   \n",
-       "01003                        186590                   329   \n",
-       "01005                         37356                   142   \n",
-       "01007                         23541                    84   \n",
-       "01009                         67126                   151   \n",
-       "...                             ...                   ...   \n",
-       "56037                         54215                   320   \n",
-       "56039                         55217                   882   \n",
-       "56041                         19895                   102   \n",
-       "56043                          7283                    92   \n",
-       "56045                          6580                    89   \n",
-       "\n",
-       "             Number of Violations  Number of Site Visits  FIPS  \\\n",
-       "County FIPS                                                      \n",
-       "01001                         132                    295     7   \n",
-       "01003                         802                   1137    25   \n",
-       "01005                         145                    458    10   \n",
-       "01007                          30                    194     5   \n",
-       "01009                         234                    573    12   \n",
-       "...                           ...                    ...   ...   \n",
-       "56037                         766                    357  2576   \n",
-       "56039                        2589                    708  6384   \n",
-       "56041                         210                    124   672   \n",
-       "56043                         130                     51   504   \n",
-       "56045                        1037                     85   728   \n",
-       "\n",
-       "             Number of Counties Served  \n",
-       "County FIPS                             \n",
-       "01001                                7  \n",
-       "01003                               25  \n",
-       "01005                               10  \n",
-       "01007                                5  \n",
-       "01009                               12  \n",
-       "...                                ...  \n",
-       "56037                               46  \n",
-       "56039                              114  \n",
-       "56041                               12  \n",
-       "56043                                9  \n",
-       "56045                               13  \n",
-       "\n",
-       "[3087 rows x 6 columns]"
+       "County FIPS\n",
+       "01001      7\n",
+       "01003     25\n",
+       "01005     10\n",
+       "01007      5\n",
+       "01009     12\n",
+       "        ... \n",
+       "56037     46\n",
+       "56039    114\n",
+       "56041     12\n",
+       "56043      9\n",
+       "56045     13\n",
+       "Name: PWS ID, Length: 3087, dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_AllStateWaterSupplies.groupby(\"County FIPS\").sum()"
+    "numberWaterSuppliesInCounty"
    ]
   },
   {
