population served by county

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2205,6 +2205,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "populationServedByCounty = df_AllStateWaterSupplies.groupby(\"County FIPS\").sum()[\"PopulationServed Count\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "County FIPS\n",
+       "01001     62988\n",
+       "01003    186590\n",
+       "01005     37356\n",
+       "01007     23541\n",
+       "01009     67126\n",
+       "          ...  \n",
+       "56037     54215\n",
+       "56039     55217\n",
+       "56041     19895\n",
+       "56043      7283\n",
+       "56045      6580\n",
+       "Name: PopulationServed Count, Length: 3087, dtype: int32"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "populationServedByCounty"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
