ready to begin figuring out water system size thresholds based on operators

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2330,6 +2330,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now decide on the population served thresholds based on operator numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 174,
    "metadata": {},
