added log base 10 population served

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2775,6 +2775,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\garfink2\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\pandas\\core\\series.py:679: RuntimeWarning: divide by zero encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_AllStateWaterSupplies[\"Base 10 Population Served\"] = np.log10(df_AllStateWaterSupplies[\"PopulationServed Count\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
