--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -64,14 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_WaterSystems = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\drinkingwater\\\\watersystems\"\n",
     "csv_FacilityFiles = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\drinkingwater\\\\national_combined\\\\NATIONAL_FACILITY_FILE.CSV\"\n",
     "shp_USCounties = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_county\\\\tl_2017_us_county.shp\"\n",
-    "excel_StateFPCodes = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\statefpcodes.xlsx\""
+    "excel_StateFPCodes = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\statefpcodes.xlsx\"\n",
+    "excel_BLSIndustries = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\Copy of industry_titles.xlsx\""
    ]
   },
   {
@@ -2843,11 +2844,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load employment data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# {Code:Industry Title} https://data.bls.gov/cew/doc/titles/industry/industry_titles.htm\n",
+    "NAICSCodesToExtract = {}"
+   ]
   }
  ],
  "metadata": {
