added data for employment

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,8 @@
     "csv_FacilityFiles = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\drinkingwater\\\\national_combined\\\\NATIONAL_FACILITY_FILE.CSV\"\n",
     "shp_USCounties = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_county\\\\tl_2017_us_county.shp\"\n",
     "excel_StateFPCodes = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\statefpcodes.xlsx\"\n",
-    "excel_BLSIndustries = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\Copy of industry_titles.xlsx\""
+    "excel_BLSIndustries = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\Copy of industry_titles.xlsx\"\n",
+    "csv_EmployementData2019Q1 = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\2019_qtrly_singlefile\\\\2019.q1-q3.singlefile.csv\""
    ]
   },
   {
