loading employment and industry data

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2857,6 +2857,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "excel_BLSIndustries = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\Copy of industry_titles.xlsx\"\n",
+    "csv_EmployementData2019Q1 = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\2019_qtrly_singlefile\\\\2019.q1-q3.singlefile.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_BLSIndustries = pd.read_excel(excel_BLSIndustries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_EmploymentData = pd.read_csv(csv_EmployementData2019Q1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# {Code:Industry Title} https://data.bls.gov/cew/doc/titles/industry/industry_titles.htm\n",
     "NAICSCodesToExtract = {}"
    ]
