loaded the industry data and filtere by if I want to include

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2872,18 +2872,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>industry_code</th>\n",
+       "      <th>industry_title</th>\n",
+       "      <th>Include</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1012</td>\n",
+       "      <td>1012 Construction</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1013</td>\n",
+       "      <td>1013 Manufacturing</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1021</td>\n",
+       "      <td>1021 Trade, transportation, and utilities</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>22</td>\n",
+       "      <td>NAICS 22 Utilities</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>221</td>\n",
+       "      <td>NAICS 221 Utilities</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2487</th>\n",
+       "      <td>9281</td>\n",
+       "      <td>NAICS 9281 National security and international...</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2488</th>\n",
+       "      <td>92811</td>\n",
+       "      <td>NAICS 92811 National security</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2489</th>\n",
+       "      <td>928110</td>\n",
+       "      <td>NAICS 928110 National security</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2490</th>\n",
+       "      <td>92812</td>\n",
+       "      <td>NAICS 92812 International affairs</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2491</th>\n",
+       "      <td>928120</td>\n",
+       "      <td>NAICS 928120 International affairs</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     industry_code                                     industry_title Include\n",
+       "3             1012                                  1012 Construction     Yes\n",
+       "4             1013                                 1013 Manufacturing     Yes\n",
+       "6             1021          1021 Trade, transportation, and utilities     Yes\n",
+       "197             22                                 NAICS 22 Utilities     Yes\n",
+       "198            221                                NAICS 221 Utilities     Yes\n",
+       "...            ...                                                ...     ...\n",
+       "2487          9281  NAICS 9281 National security and international...     Yes\n",
+       "2488         92811                      NAICS 92811 National security     Yes\n",
+       "2489        928110                     NAICS 928110 National security     Yes\n",
+       "2490         92812                  NAICS 92812 International affairs     Yes\n",
+       "2491        928120                 NAICS 928120 International affairs     Yes\n",
+       "\n",
+       "[100 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_BLSIndustries[df_BLSIndustries[\"Include\"]==\"Yes\"]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\garfink2\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3051: DtypeWarning: Columns (0) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
-    "df_EmploymentData = pd.read_csv(csv_EmployementData2019Q1)"
+    "df_EmploymentData = pd.read_csv(csv_EmployementData2019Q1) # https://data.bls.gov/cew/doc/layouts/csv_quarterly_layout.htm"
    ]
   },
   {
